--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/pixelify-sans": "^5.2.5",
     "@radix-ui/react-menubar": "^1.1.12",
+    "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "^5.75.1",
@@ -20,6 +21,8 @@
     "@tanstack/router-plugin": "^1.114.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gsap": "^3.13.0",
+    "lucide": "^0.507.0",
     "lucide-react": "^0.476.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
