--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/pixelify-sans": "^5.2.5",
+    "@gsap/react": "^2.1.2",
     "@radix-ui/react-menubar": "^1.1.12",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.0",
